// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`popover default(bottom) style 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div>
      <span>
        Press me!
      </span>
    </div>
    <div
      class="container"
      style="width: 488px; top: 20px; left: 0px;"
    >
      <div
        class="arrowWrapper"
        style="bottom: 100%; left: 0px; transform: translateX(-50%) rotate(180deg);"
      >
        <div
          class="arrow arrow-d0"
        />
      </div>
      <div
        class="box box-d0"
      >
        <div
          class="boxContent box box-d1"
        >
          <div
            class="inline inline-d0"
          >
            <div>
              <div
                class="textAlign box box-d2"
              >
                <div
                  class="textContent marginStack marginStack-d0"
                >
                  <div />
                  <div>
                    <span
                      class="text text-d0"
                    >
                      Content
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <button
          aria-label="Cerrar"
          class="touchable closeButtonIcon"
          style="display: inline-block; vertical-align: middle; text-align: center; background-color: transparent; background-position: 50% 50%; background-size: 100% 100%; background-repeat: no-repeat; border: 0px; cursor: pointer; height: 24px; width: 24px;"
          type="button"
        >
          <svg
            height="24"
            role="presentation"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M16.841 17.853a.722.722 0 00.948-1.086L13.022 12l4.766-4.767.065-.074a.722.722 0 00-1.086-.947L12 10.978 7.233 6.211l-.074-.064a.722.722 0 00-.947 1.086L10.979 12 6.21 16.767l-.064.074a.722.722 0 001.086.947L12 13.021l4.767 4.767.074.065z"
              fill="#313235"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`popover left style 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div>
      <span>
        Press me!
      </span>
    </div>
    <div
      class="container"
      style="width: 488px; left: -508px; top: 0px; transform: translateY(-50%);"
    >
      <div
        class="arrowWrapper"
        style="left: 100%; top: 50%; transform: translateY(-100%) rotate(-90deg); transform-origin: bottom;"
      >
        <div
          class="arrow arrow-d0"
        />
      </div>
      <div
        class="box box-d0"
      >
        <div
          class="boxContent box box-d1"
        >
          <div
            class="inline inline-d0"
          >
            <div>
              <div
                class="textAlign box box-d2"
              >
                <div
                  class="textContent marginStack marginStack-d0"
                >
                  <div />
                  <div>
                    <span
                      class="text text-d0"
                    >
                      Content
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <button
          aria-label="Cerrar"
          class="touchable closeButtonIcon"
          style="display: inline-block; vertical-align: middle; text-align: center; background-color: transparent; background-position: 50% 50%; background-size: 100% 100%; background-repeat: no-repeat; border: 0px; cursor: pointer; height: 24px; width: 24px;"
          type="button"
        >
          <svg
            height="24"
            role="presentation"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M16.841 17.853a.722.722 0 00.948-1.086L13.022 12l4.766-4.767.065-.074a.722.722 0 00-1.086-.947L12 10.978 7.233 6.211l-.074-.064a.722.722 0 00-.947 1.086L10.979 12 6.21 16.767l-.064.074a.722.722 0 001.086.947L12 13.021l4.767 4.767.074.065z"
              fill="#313235"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`popover right style 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div>
      <span>
        Press me!
      </span>
    </div>
    <div
      class="container"
      style="width: 488px; left: 20px; top: 0px; transform: translateY(-50%);"
    >
      <div
        class="arrowWrapper"
        style="right: 100%; top: 50%; transform: translateY(-100%) rotate(90deg); transform-origin: bottom;"
      >
        <div
          class="arrow arrow-d0"
        />
      </div>
      <div
        class="box box-d0"
      >
        <div
          class="boxContent box box-d1"
        >
          <div
            class="inline inline-d0"
          >
            <div>
              <div
                class="textAlign box box-d2"
              >
                <div
                  class="textContent marginStack marginStack-d0"
                >
                  <div />
                  <div>
                    <span
                      class="text text-d0"
                    >
                      Content
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <button
          aria-label="Cerrar"
          class="touchable closeButtonIcon"
          style="display: inline-block; vertical-align: middle; text-align: center; background-color: transparent; background-position: 50% 50%; background-size: 100% 100%; background-repeat: no-repeat; border: 0px; cursor: pointer; height: 24px; width: 24px;"
          type="button"
        >
          <svg
            height="24"
            role="presentation"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M16.841 17.853a.722.722 0 00.948-1.086L13.022 12l4.766-4.767.065-.074a.722.722 0 00-1.086-.947L12 10.978 7.233 6.211l-.074-.064a.722.722 0 00-.947 1.086L10.979 12 6.21 16.767l-.064.074a.722.722 0 001.086.947L12 13.021l4.767 4.767.074.065z"
              fill="#313235"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`popover top style 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div>
      <span>
        Press me!
      </span>
    </div>
    <div
      class="container"
      style="width: 488px; transform: translateY(-100%); top: -20px; left: 0px;"
    >
      <div
        class="arrowWrapper"
        style="top: 100%; left: 0px; transform: translateX(-50%);"
      >
        <div
          class="arrow arrow-d0"
        />
      </div>
      <div
        class="box box-d0"
      >
        <div
          class="boxContent box box-d1"
        >
          <div
            class="inline inline-d0"
          >
            <div>
              <div
                class="textAlign box box-d2"
              >
                <div
                  class="textContent marginStack marginStack-d0"
                >
                  <div />
                  <div>
                    <span
                      class="text text-d0"
                    >
                      Content
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <button
          aria-label="Cerrar"
          class="touchable closeButtonIcon"
          style="display: inline-block; vertical-align: middle; text-align: center; background-color: transparent; background-position: 50% 50%; background-size: 100% 100%; background-repeat: no-repeat; border: 0px; cursor: pointer; height: 24px; width: 24px;"
          type="button"
        >
          <svg
            height="24"
            role="presentation"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M16.841 17.853a.722.722 0 00.948-1.086L13.022 12l4.766-4.767.065-.074a.722.722 0 00-1.086-.947L12 10.978 7.233 6.211l-.074-.064a.722.722 0 00-.947 1.086L10.979 12 6.21 16.767l-.064.074a.722.722 0 001.086.947L12 13.021l4.767 4.767.074.065z"
              fill="#313235"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
